# phorger-with-UI

./: .gitignore  Phorger.py  README.md  app.py  log.txt  main.py  pyproject.toml  requirements.txt  settings.json
pkg/: __init__.py  gdrive_uploader.py  photofinder.py  photomover.py
